# is_affected

./: .copier-answers.yml  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md
.github/workflows/: example.yml
ci/: check-e2e-formatting.sh  check-python-formatting.sh  end-to-end-test.Dockerfile  end-to-end-test.sh  example.sh  fix-e2e-formatting.sh  fix-python-formatting.sh  publish-binary.Dockerfile  publish-binary.sh  release-artifacts.sh
end-to-end-tests/features/: affects-current-directory.feature  affects_current_directory.feature  effects-current-directory.feature  from-arguments-conflicts.feature  from-commit-hash.feature  from-commit-message.feature  from-reference.feature  from-shortened-commit-hash.feature  from_arguments_conflicts.feature  from_commit_hash.feature  from_reference.feature  from_shortened_commit_hash.feature  git-environment-variables.feature  git_environment_variables.feature  is-affected-detects-files.feature  is-effected-detects-directories.feature  is-effected-detects-files.feature  is_affected_detects_directories.feature  is_affected_detects_files.feature  list-effected-resources.feature  list_affected_resources.feature  merge-commit.feature  merge_commit.feature  output-arguments-conflicts.feature  output_arguments_conflicts.feature
end-to-end-tests/features/steps/: assertions.py  given.py  then.py  util.py  utilities.py  when.py
is_affected/: .gitignore  Cargo.toml  README.md
is_affected/end-to-end-tests/features/: affects-current-directory.feature  affects_current_directory.feature  environment.py  from-arguments-conflicts.feature  from-commit-hash.feature  from-reference.feature  from-shortened-commit-hash.feature  from_arguments_conflicts.feature  from_arguments_missing.feature  from_reference.feature  git-environment-variables.feature  is-affected-detects-directories.feature  is-affected-detects-files.feature  is_affected_detects_directories.feature  list-affected-resources.feature  list_affected_resources.feature  merge-commit.feature  output-arguments-conflicts.feature  output_arguments_conflicts.feature
is_affected/end-to-end-tests/features/steps/: assertions.py  given.py  then.py  utilities.py  when.py
is_affected/src/: main.rs
is_affected/src/cli/: mod.rs
is_affected_lib/: Cargo.toml  README.md
is_affected_lib/src/: lib.rs
is_affected_lib/src/commit/: mod.rs
is_affected_lib/src/commit/tests/: mod.rs
is_affected_lib/src/commits/: mod.rs
src/: main.rs
src/cli/: mod.rs
src/commits/: mod.rs
src/commits/commit/: mod.rs
src/commits/commit/tests/: mod.rs
src/model/: mod.rs
src/model/commits/: mod.rs
src/model/commits/commit/: mod.rs
src/model/commits/commit/tests/: mod.rs
src/utilities/: mod.rs
src/utilities/git/: mod.rs
src/utilities/regex/: mod.rs
