[package]
name = "is_affected_lib"
version = "0.1.1"
description = "A utility for checking and listing the affected resources across a range of commits, useful when working with monorepos."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/is_affected/"
readme = "README.md"
keywords = ["monorepo", "commits", "affected", "repository", "git"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
# For logging.
log = "0.4.14"

# For reading Git commits.
git2 = { version = "0.13.25", default-features = false, features=[] }

# For checking affected paths.
regex = "1.5.4"


[dev-dependencies]
# For parameterized testing.
rstest = "0.12.0"
